# serde_bucket

./: Cargo.toml  readme.md
src/: _prototype.rs  bucket.rs  de.rs  debug.rs  error.rs  lib.rs  node.rs  segment.rs  ser.rs  trigger.rs
