[package]
name = "serde_bucket"
version = "0.1.5"
edition = "2021"

description = "format analogous representation of any self-describing type with serde"
keywords = ["serde", "format", "serde-value"]
license = "GPL-3.0-or-later"

repository = "https://github.com/samhdev/serde_bucket"

[features]
error = []
deserializer = []

[dependencies]
serde = { version = "1.0.163" }

[dev-dependencies]
serde_json = "1.0.96"
serde = { features = ["derive"] }